--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="stylesheet" href="source/css/style.css">
+        <!-- install three.js using existing content delivery network (CDN) -->
+        <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+        <script type="importmap"> {
+            "imports": {
+                "three": "https://unpkg.com/three@<version>/build/three.module.js"
+            }
+        }</script>
+        <!-- link index.html with cube.js -->
+        <script type="module" src="source/javascript/line.js"></script>
+        <title>golofan.club</title>
+    </head>
+
+    <body>
+    </body>
 </html>
