--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             }
         }</script>
         <!-- link index.html with cube.js -->
-        <script type="module" src="source/javascript/line.js"></script>
+        <script type="module" src="source/javascript/cube.js"></script>
         <title>golofan.club</title>
     </head>
 
